# wipeout-rewrite-uwp

./: .gitignore  CMakeLists.txt
ports/uwp/: CMakeLists.txt  Package.appxmanifest  README.md  main.cpp
ports/uwp/helpers/: uwp_egl_surface_size.c  uwp_egl_surface_size.h
src/: platform_sdl.c  render_gl.c
